--- a/TODO
+++ b/TODO
@@ -1,5 +1,3 @@
-- Add caching layer for PS1 use
-  - Probably just cache entire JSON response
-- Un-hardcode location
 - Add icons
 - Document use
+- BG caching (self-call?)
